port: adapt item definitions and part factories to Java 8/AE2 8